<resources>
    <string name="app_name">LoginRegister</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="signup">Signup</string>
    <string name="Loginhere">Already have a account? <u>Login</u></string>
    <string name="Signuphere">Create a new account? <u>Signup</u></string>
    <string name="ffullname">Fullname</string>
    <string name="eemail">Email</string>
    <string name="welcome">Welcome!</string>
    <string name="search_sample_string">關鍵字搜尋</string>
    <string name="diet_coke">健怡可樂</string>
    <string name="price_1.99">$1.99</string>
    <string name="price_28">$28</string>
    <string name="size">355ml</string>
    <string name="protein">蛋白質</string>
    <string name="gram_4">4 g</string>
    <string name="carbs">醣類</string>
    <string name="gram_40">40 g</string>
    <string name="fat">脂肪</string>
    <string name="gram_3">3 g</string>
    <string name="kcal_213">213 kcal</string>
    <string name="meat_floss_onigiri">御選肉鬆飯糰</string>
    <string name="kcal">kcal</string>
    <string name="tool_string_1">800</string>
    <string name="tool_string_2">700</string>
    <string name="protein_one_word">蛋</string>
    <string name="carbs_one_word">醣</string>
    <string name="fat_one_word">脂</string>
    <string name="tool_string_3">30 / 60 g</string>
    <string name="tool_string_4">98 / 92 g</string>
    <string name="tool_string_5">20 / 24 g</string>
    <string name="chosen_items">已選擇項目</string>
    <string name="______ek5_string"></string>
    <string name="____ek3_string">1</string>
    <string name="total">TOTAL</string>
    <string name="____213_kcal_______4_g______40_g______3_g_string"> 213 kcal |  4 g |  40 g |  3 g</string>
    <string name="add_btn_label">確定新增</string>
    <string name="title_activity_saveplan">saveplan</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="data_text">2000-09-17</string>
    <string name="data_icon" />

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>