<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    >


    <RelativeLayout
        android:id="@+id/btn_add_to_cart"
        android:layout_marginTop="11dp"
        android:layout_marginStart="270dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        >

        <View
            android:background="@drawable/rectangle_yellow"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:layout_width="42.17dp"
            android:layout_height="40.5dp" />

        <ImageView
            android:src="@drawable/ic_plus"
            android:contentDescription="plus_sign"
            android:layout_marginStart="13dp"
            android:layout_marginTop="13dp"
            android:layout_width="15.7dp"
            android:layout_height="15.08dp" />

    </RelativeLayout>

    <TextView android:id="@+id/tv_price"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal|center"
        android:gravity="center"
        android:textSize="16sp"
        android:textColor="@color/gray_676565"
        android:layout_marginStart="2dp"
        android:layout_marginTop="88dp"
        android:layout_width="88dp"
        android:layout_height="25dp"
        tools:text="@string/price_28"
        />


    <RelativeLayout
        android:layout_marginTop="62dp"
        android:layout_marginStart="97dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        >

        <TextView
            android:layout_gravity="center_horizontal|center"
            android:gravity="center"
            android:textSize="13sp"
            android:textColor="@color/gray_7c7c7c"
            android:layout_marginTop="3dp"
            android:layout_width="64.82dp"
            android:layout_height="27.79dp"
            android:text="@string/protein"
            />

        <TextView android:id="@+id/tv_protein_content"
            android:textStyle="bold|italic"
            android:layout_gravity="center_horizontal|center"
            android:gravity="center"
            android:textSize="13sp"
            android:textColor="@color/gray_7c7c7c"
            android:layout_marginTop="24dp"
            android:layout_width="64.82dp"
            android:layout_height="24.9dp"
            tools:text="@string/gram_4"
            />

        <ImageView
            android:src="@drawable/rectangle_orange_trans"
            android:contentDescription="protein_background_rectangle"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:layout_width="64.82dp"
            android:layout_height="51.97dp" />

    </RelativeLayout>


    <RelativeLayout
        android:layout_marginTop="62dp"
        android:layout_marginStart="172dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        >

        <TextView
            android:layout_gravity="center_horizontal|center"
            android:gravity="center"
            android:textSize="13sp"
            android:textColor="@color/gray_7c7c7c"
            android:layout_marginTop="3dp"
            android:layout_width="64.82dp"
            android:layout_height="27.79dp"
            android:text="@string/carbs"
            />

        <TextView android:id="@+id/tv_carbs_content"
            android:textStyle="bold|italic"
            android:layout_gravity="center_horizontal|center"
            android:gravity="center"
            android:textSize="13sp"
            android:textColor="@color/gray_7c7c7c"
            android:layout_marginTop="24dp"
            android:layout_width="64.82dp"
            android:layout_height="24.9dp"
            android:text="@string/gram_40"
            />

        <ImageView
            android:src="@drawable/rectangle_orange_trans"
            android:contentDescription="carbs_background_rectangle"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:layout_width="64.82dp"
            android:layout_height="51.97dp" />

    </RelativeLayout>


    <RelativeLayout
        android:layout_marginTop="62dp"
        android:layout_marginStart="247dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        >

        <TextView
            android:layout_gravity="center_horizontal|center"
            android:gravity="center"
            android:textSize="13sp"
            android:textColor="@color/gray_7c7c7c"
            android:layout_marginTop="3dp"
            android:layout_width="64.82dp"
            android:layout_height="27.79dp"
            android:text="@string/fat"
            />

        <TextView android:id="@+id/tv_fat_content"
            android:textStyle="bold|italic"
            android:layout_gravity="center_horizontal|center"
            android:gravity="center"
            android:textSize="13sp"
            android:textColor="@color/gray_7c7c7c"
            android:layout_marginTop="24dp"
            android:layout_width="64.82dp"
            android:layout_height="24.9dp"
            tools:text="@string/gram_3"
            />

        <ImageView
            android:layout_width="64.82dp"
            android:layout_height="51.97dp"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:contentDescription="fat_background_rectangle"
            android:src="@drawable/rectangle_orange_trans" />

    </RelativeLayout>

    <TextView
        android:id="@+id/tv_kcal_content"
        android:textStyle="bold"
        android:textSize="14sp"
        android:textColor="@color/gray_6c6c6c"
        android:layout_marginStart="99dp"
        android:layout_marginTop="37dp"
        android:layout_width="82.82dp"
        android:layout_height="25.4dp"
        tools:text="@string/kcal_213"
        />

    <TextView
        android:id="@+id/tv_food_name"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:layout_marginStart="99dp"
        android:layout_marginTop="14dp"
        android:layout_width="187.54dp"
        android:layout_height="24.47dp"
        tools:text="@string/meat_floss_onigiri"
        />

    <View
        android:layout_width="331.13dp"
        android:layout_height="124.27dp"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:background="@drawable/rectangle_gray_stroke" />

    <ImageView
        android:id="@+id/iv_food_photo"
        android:layout_width="88dp"
        android:layout_height="66dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="18dp"
        android:contentDescription="photo_of_the_food"
        android:src="@drawable/img_food" />

</RelativeLayout>